--- a/lms/templates/lms/dashboard.html
+++ b/lms/templates/lms/dashboard.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
+{% if user.is_authenticated %}
 <h2>Your Games</h2>
 <table class="table">
   <thead>
@@ -79,5 +80,12 @@
 <p>
 <a href="{% url 'lms_create_game' %}" class="btn btn-success mb-3">+ Create New Game</a>
 </p>
+
+
+{% else %}
+    <h2>Last Man Standing</h2>
+        <p>You are not logged in.</p>
+            <p><a href="{% url 'account_login' %}">Login</a>.</p>
+{% endif %}
 
 {% endblock %}
