--- a/score_predict/templates/score_predict/fixtures.html
+++ b/score_predict/templates/score_predict/fixtures.html
@@ -2,6 +2,12 @@
 {% load static %}
 {% block content %}
 <!-- content starts here -->
+ <ul class="nav nav-pills">
+  <li class="nav-item">
+     <a class="nav-link {% if request.resolver_match.url_name == 'game_history' %}active{% endif %}" href="{% url 'game_history' %}">Game History</a>
+  </li>
+</ul>
+<!--
 <div class="container mx-auto p-4">
     <ul class="nav nav-tabs" role="tablist">
         <li class="nav-item" role="presentation">
@@ -10,22 +16,10 @@
         <li class="nav-item" role="presentation">
             <a class="nav-link {% if selected_tab == 'midweek' %}active{% endif %}" data-bs-toggle="tab" href="?tab=midweek" aria-selected="false" role="tab">Midweek</a>
         </li>
-        <!-- <li class="nav-item" role="presentation"> 
-            <a class="nav-link" href="#" aria-selected="false" tabindex="-1" role="tab">Entered</a>
-            </li> 
-            <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Choose Leagues</a>
-            <div class="dropdown-menu">
-                <h6 class="dropdown-header">Available Leagues</h6>
-                <a class="dropdown-item" href="#">English</a>
-                <a class="dropdown-item" href="#">TBC</a>
-                <a class="dropdown-item" href="#">TBC</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">TBC</a>
-            </div>
-            </li> -->
+
     </ul>
 </div>
+
 <div id="myTabContent" class="tab-content">
     <div class="tab-pane fade active show" id="weekend" role="tabpanel">
     </div>
@@ -37,7 +31,7 @@
     <div class="tab-pane fade" id="dropdown2">
         <p></p>
     </div>
-</div>
+</div> -->
 <!-- Hide submission button if user is not logged in-->
 <div class="container mx-auto mt-0 pl-4 pr-4">
     <div class="row justify-content-md-center mb-2 pt-0">
